added auth service
