# internal/transport/http/v1/dto/user.go
@@ -1,19 +1,19 @@
 package dto
 
 type SignUpRequest struct {
-	Username string `json:"username"`
-	Email    string `json:"email"`
-	Phone    string `json:"phone"`
-	Password string `json:"password"`
-}
-
-type UserIdResponse struct {
-	UserId string `json:"userId"`
+	Username string `json:"username" validate:"required"`
+	Email    string `json:"email" validate:"required,email"`
+	Phone    string `json:"phone" validate:"required,e164"`
+	Password string `json:"password" validate:"required,min=8"`
 }
 
 type SignInRequest struct {
-	Login    string `json:"login"`
-	Password string `json:"password"`
+	Login    string `json:"login" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
+
+type UserIdResponse struct {
+	UserId int64 `json:"userId"`
 }
 
 type TokenResponse struct {
